--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,33 @@
 astropy==4.0.1
+attrs==20.3.0
+certifi==2020.12.5
+chardet==4.0.0
+comet-ml==3.9.0
+configobj==5.0.6
 cycler==0.10.0
 dataclasses==0.8
+dulwich==0.20.21
+everett==1.0.3
+idna==2.10
+importlib-metadata==3.10.1
+jsonschema==3.2.0
 kiwisolver==1.3.1
 matplotlib==3.2.2
 numpy==1.19.1
+nvidia-ml-py3==7.352.0
 Pillow==8.2.0
 pyparsing==2.4.7
+pyrsistent==0.17.3
 python-dateutil==2.8.1
+requests==2.25.1
+requests-toolbelt==0.9.1
 six==1.15.0
 torch==1.8.1
 torchvision==0.9.1
 tqdm==4.47.0
 typing-extensions==3.7.4.3
+urllib3==1.26.4
+websocket-client==0.58.0
+wrapt==1.12.1
+wurlitzer==2.1.0
+zipp==3.4.1
