--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,91 @@
+appnope==0.1.2
+argon2-cffi==20.1.0
 astropy==4.0.1
+async-generator==1.10
 attrs==20.3.0
+backcall==0.2.0
+bleach==3.3.0
 certifi==2020.12.5
+cffi==1.14.5
 chardet==4.0.0
 comet-ml==3.9.0
 configobj==5.0.6
 cycler==0.10.0
 dataclasses==0.8
+decorator==5.0.9
+defusedxml==0.7.1
 dulwich==0.20.21
+entrypoints==0.3
 everett==1.0.3
 idna==2.10
+imageio==2.9.0
 importlib-metadata==3.10.1
+ipykernel==5.5.5
+ipython==7.16.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+jedi==0.18.0
+Jinja2==3.0.1
+jsonpatch==1.32
+jsonpointer==2.1
 jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.2.0
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
+MarkupSafe==2.0.1
 matplotlib==3.2.2
+mistune==0.8.4
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+neuralnet-pytorch==0.0.3
+notebook==6.4.0
 numpy==1.19.1
 nvidia-ml-py3==7.352.0
+packaging==20.9
+pandocfilters==1.4.3
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==8.2.0
+prometheus-client==0.10.1
+prompt-toolkit==3.0.18
+ptyprocess==0.7.0
+pycparser==2.20
+Pygments==2.9.0
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
+PyYAML==5.4.1
+pyzmq==22.0.3
+qtconsole==5.1.0
+QtPy==1.9.0
 requests==2.25.1
 requests-toolbelt==0.9.1
+scipy==1.5.4
+Send2Trash==1.5.0
+sep==1.2.0
 six==1.15.0
+terminado==0.10.0
+testpath==0.5.0
 torch==1.8.1
+torchfile==0.1.0
 torchvision==0.9.1
+tornado==6.1
 tqdm==4.47.0
+traitlets==4.3.3
 typing-extensions==3.7.4.3
 urllib3==1.26.4
+visdom==0.1.8.9
+wcwidth==0.2.5
+webencodings==0.5.1
 websocket-client==0.58.0
+widgetsnbextension==3.5.1
 wrapt==1.12.1
 wurlitzer==2.1.0
 zipp==3.4.1
